--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "json:server": "json-server --watch db.json"
-
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
